@@ -19,7 +19,7 @@
 .\" You should have received a copy of the GNU General Public License
 .\" along with this program.  If not, see <http://www.gnu.org/licenses/>.
 .
-.TH dpkg\-parsechangelog 1 "2012-05-04" "Debian Project" "dpkg utilities"
+.TH dpkg\-parsechangelog 1 "2012-07-18" "Debian Project" "dpkg utilities"
 .SH NAME
 dpkg\-parsechangelog \- parse Debian changelog files
 .
@@ -52,6 +52,10 @@ This directory is searched before the default directories
 which are currently
 .BR /usr/local/lib/dpkg/parsechangelog " and "
 .BR /usr/lib/dpkg/parsechangelog .
+.TP
+.BR \-S ", " \-\-show\-field " \fIfield\fP"
+Specifies the name of the field to show (since dpkg 1.17.0).
+The field name is not printed, only its value.
 .TP
 .BR \-? ", " \-\-help
 Show the usage message and exit.
