@@ -18,6 +18,8 @@ dpkg (1.17.0) UNRELEASED; urgency=low
   * Fix clang warnings due to change of alignment requirements.
   * Change copyright file to point to GPL-2 instead of GPL.
   * Do not pass -e in shell script shebangs, set it in the body.
+  * Add new dpkg-parsechangelog --show-field option to print a field value.
+    Closes: #284664
 
  -- Guillem Jover <guillem@debian.org>  Fri, 03 Aug 2012 13:21:00 +0200
 
